--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "trip server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [
     "api"
@@ -19,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
+    "nodemon": "^2.0.22",
     "uniqid": "^5.4.0"
   }
 }
